--- a/app.json
+++ b/app.json
@@ -132,7 +132,7 @@
         },
         "BUTTON_LOCK_TEXT": {
             "description": "button lock text [User = {query}]",
-            "value": "⚠️ 𝙃𝙚𝙮 {query}! 𝙏𝙝𝙖𝙩'𝙨 𝙉𝙤𝙩 𝙁𝙤𝙧 𝙔𝙤𝙪. 𝙋𝙡𝙚𝙖𝙨𝙚 𝙍𝙚𝙦𝙪𝙚𝙨𝙩 𝙔𝙤𝙪𝙧 𝙊𝙬𝙣",
+            "value": "⚠️ 𝙃𝙚𝙮 {query}! file nyn tharilla ;)",
             "required": false
         },
         "PMFILTER": {
